<resources>
    <string name="app_name">House_Keeping</string>
    <string name="button">login or register</string>
    <string name="button2">enter as guest</string>
    <string name="button3">sign in</string>
    <string name="button4">sign up</string>
    <string name="button5">start a new search</string>
    <string name="button6">Publish your listing</string>
    <string name="button7">Upload photo</string>
    <string name="button9">Search</string>
    <string name="button12">Area</string>
    <string name="button13">Type</string>
    <string name="button14">Price</string>
    <string name="button15">Internal surface</string>
    <string name="button16">Bedrooms</string>
    <string name="button17">Bathrooms</string>
    <string name="button18">Floors</string>
    <string name="button19">Year build</string>
    <string name="button20">Heating type</string>
    <string name="button21">Heating medium</string>
    <string name="button22">Energy class</string>
    <string name="textView">Welcome to House Keeping</string>
    <string name="textView2">Find your place and dream on</string>
</resources>